# aop_mesh-muncher

./: .hgignore  CMakeLists.txt  FindAntTweakBar.cmake  FindGLEW.cmake  FindGWEN.cmake  FindNiven.cmake  FindSFML.cmake  FindSOIL.cmake  Findyaml-cpp.cmake  README.md
aop/: CMakeLists.txt  aopAntTWBarUIHelpers.h  aopApplication.h  aopCameraViewsUI.cpp  aopCameraViewsUI.h  aopCandidateSidebarUI.cpp  aopCandidateSidebarUI.h  aopMain.cpp  aopMainUI.h  aopModelTypesUI.cpp  aopModelTypesUI.h  aopQueryVolumesUI.cpp  aopQueryVolumesUI.h  aopSettings.h  aopSettingsStorage.cpp  aopSettingsStorage.h  aopTimedLog.cpp  aopTimedLog.h  candidateFinder.cpp  candidateFinderCache.cpp  candidateFinderInterface.h  editor.cpp  editor.h  modelButtonWidget.cpp  modelButtonWidget.h  modelDatabase.cpp  modelDatabase.h  modelDatabaseStorage.cpp  modelDatabaseStorage.h  neighborhoodDatabase.cpp  neighborhoodDatabase.h  neighborhoodDatabaseStorage.cpp  neighborhoodDatabaseStorage.h  optixEigenInterop.h  probeDatabase.cpp  probeDatabase.h  probeDatabaseQueries.h  probeDatabaseStorage.cpp  probeDatabaseStorage.h  probeGenerator.cpp  (+24 more)
blockMipmaps/: CMakeLists.txt  blockMipmaps.cpp
calibrateVolumeBB/: CMakeLists.txt  calibrateVolumeBB.cpp  volumeCalibration.h
cielab/: CMakeLists.txt  cielab.cpp  cielab.h
ctp/: CMakeLists.txt  ctp.cpp  ctp.h  ctpTest.cpp
densityPyramid/: CMakeLists.txt  cache.h  densityPyramid.cpp  findDistances.cpp  findDistances.h  findDistancesTests.cpp  memoryBlockStorage.h  mipVolume.h  utility.h
framework/: CMakeLists.txt  antTWBarUI.cpp  antTWBarUI.h  antTweakBarEventHandler.h  anttwbarcollection.h  anttwbargroup.h  autoTimer.cpp  autoTimer.h  camera.h  cameraInputControl.h  contextHelper.h  debugWindows.h  eigenProjectionMatrices.h  eventHandling.h  flatImmutableMultiMap.h  glslPipeline.cpp  glslPipeline.h  logger.cpp  logger.h  mathUtility.h  progressTracker.cpp  progressTracker.h  test_flatImmutableMultiMap.cpp  test_progressTracker.cpp  test_rayIntersections.cpp  verboseEventHandlers.h
generic/: CMakeLists.txt  sort_permute_iter.h  sort_permute_iter_test.cpp
glVolumePlacerUI/: CMakeLists.txt  anttwbarcollection.h  anttwbargroup.h  contextHelper.h  glHelpers.h  glVolumePlacerUI.cpp  make_nonallocated_shared.h  ptree_serializer.h  serializer.h  ui.h  volumePlacer.h
glVoxelVolumePlacerUI/: CMakeLists.txt  glHelpers.h  glVoxelVolumePlacerUI.cpp  twEventSFML20.cpp  ui.h  volumePlacer.h
glVoxelizer/: CMakeLists.txt  eigenProjectionMatrices.h  glVoxelizer.cpp  grid.h  gridStorage.h  voxelizer.cpp  voxelizer.h
glutil/: Debug.cpp  Debug.h  debugRender.h  glObjectWrappers.h  shaderPrograms.h
minimumDensityClustering/: CMakeLists.txt  mdc.cpp
modelExport/: CMakeLists.txt  materialLibrary.cpp  materialLibrary.h  modelExport.cpp  objModel.cpp
modelSampler/: CMakeLists.txt  colorAndDepthSampler.h  depthSampler.h  depthSamplerTests.cpp  eigenProjectionMatrices.h  grid.h  gridTests.cpp  materialLibrary.cpp  materialLibrary.h  modelSampler.cpp  objModel.cpp  objModel.h  samplerTests.cpp  shearMatrixTests.cpp
objScene/: objModel.cpp  objModel.h  objSceneGL.cpp
positionSolver/: CMakeLists.txt  camera.h  cameraInputControl.h  debugRender.h  positionSolver.cpp  positionSolver.h
sampleBoxSphere/: CMakeLists.txt  sampleBoxSphere.cpp
serializer/: CMakeLists.txt  serializer.h  serializerTests.cpp  serializer_eigen.h  serializer_fwd.h  serializer_std.h
sgsScene/: CMakeLists.txt  MaxRectsBinPack.h  glslPipeline.cpp  glslPipeline.h  main_sgsSceneVoxelizer.cpp  objectMesh.cu  optixProgramHelpers.cpp  optixProgramHelpers.h  optixProgramInterface.h  optixRenderer.h  optixRendering.cpp  pinholeSelection.cu  probeTracer.cu  raytracer.cu  rendering.h  sgsScene.h  sgsSceneCreator.cpp  sgsSceneProbePOC.cpp  sgsSceneRender.h  sgsSceneRenderer.cpp  sgsSceneRenderer.h  sgsSceneViewer.cpp  terrainMesh.cu
sgsSceneWOptix/: CMakeLists.txt  MaxRectsBinPack.cpp  Rect.h  glslPipeline.cpp  glslPipeline.h  objectMesh.cu  optixProgramInterface.h  optixRendering.cpp  raytracer.cu  sgsScene.h  sgsSceneRender.h  sgsSceneViewer.cpp  terrainMesh.cu
shaderTest/: CMakeLists.txt  shaderTest.cpp
shard1/: CMakeLists.txt  FindNiven.cmake  shard1.cpp
shard2/: CMakeLists.txt  shard2.cpp
simpleBoxScenario/: CMakeLists.txt  simpleBoxScenario.cpp
texturePacker/: MaxRectsBinPack.cpp  Rect.h
volume/: CMakeLists.txt  grid.h  gridStorage.h  gridTests.cpp
volumePlacer/: CMakeLists.txt  volumePlacer.cpp  volumePlacer.h
volumePlacerUI/: CMakeLists.txt  antTweakBarEventHandler.h  anttwbarcollection.h  anttwbargroup.cpp  anttwbargroup.h  objModel.cpp  objModel.h  ptree_serializer.h  volumePlacer.h  volumePlacerUI.cpp
wml/: CMakeLists.txt  grammar.txt  leanTextProcessing.h  readme.txt  reducedGrammar.txt  reemitter.cpp  simpleLexer.h  wml.h  wmlTest.cpp  wml_detail_emitter.h  wml_detail_parser.h  wml_node.h
wml/SimpleLexer/: basicRules.h  ruleHelpers.h  textProcessor.h
