CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
FIND_PACKAGE(Niven REQUIRED COMPONENTS Core)
FIND_PACKAGE(Eigen3)
FIND_PACKAGE(GLEW)

SET(SFML_STATIC_LIBRARIES TRUE CACHE BOOL "using static libraries" FORCE)
FIND_PACKAGE(SFML COMPONENTS System Window Graphics)

#ADD_SUBDIRECTORY(shard1)
#ADD_SUBDIRECTORY(shard2)
ADD_SUBDIRECTORY(densityPyramid)
#ADD_SUBDIRECTORY(blockMipmaps)
#ADD_SUBDIRECTORY(simpleBoxScenario)
#ADD_SUBDIRECTORY(sampleBoxSphere)
#ADD_SUBDIRECTORY(volumePlacer)
ADD_SUBDIRECTORY(volumePlacerUI)
ADD_SUBDIRECTORY(calibrateVolumeBB)
ADD_SUBDIRECTORY(positionSolver)
ADD_SUBDIRECTORY(minimumDensityClustering)
ADD_SUBDIRECTORY(modelSampler)
ADD_SUBDIRECTORY(modelExport)

# Adds a new build target which copies the niven binaries to
# the output folder
NIVEN_COPY_BINARIES(${CMAKE_BINARY_DIR})