CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(shard2)

# niven is built with RTTI disabled (/GR-) and unicode-aware
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR- /D_UNICODE")

# Must link both against niven and Boost
INCLUDE_DIRECTORIES(${NIVEN_INCLUDE_DIR} ${Boost_INCLUDE_DIR})

ADD_EXECUTABLE(shard2 shard2.cpp)

# The test application uses niven core, so link against it
TARGET_LINK_LIBRARIES(shard2 ${NIVEN_CORE_LIBRARY})
TARGET_LINK_LIBRARIES(shard2 ${NIVEN_ENGINE_LIBRARY})
TARGET_LINK_LIBRARIES(shard2 ${NIVEN_RENDER_LIBRARY})
TARGET_LINK_LIBRARIES(shard2 ${NIVEN_IMAGE_LIBRARY})
TARGET_LINK_LIBRARIES(shard2 ${NIVEN_VOLUME_LIBRARY})